fixed x overflow

--- a/about-style.css
+++ b/about-style.css
@@ -1,5 +1,7 @@
 body {
   font-family: "Poppins", sans-serif;
+  overflow-x: hidden;
+  position: relative;
 }
 .about-section {
   margin: 0;
