--- a/forDetailsPage.css
+++ b/forDetailsPage.css
@@ -1,6 +1,8 @@
 body {
   background-color: #dbf9ff;
   font-family: "Poppins", sans-serif;
+  overflow-x: hidden;
+  position: relative;
 }
 .details-section {
   width: 100%;
