--- a/style.css
+++ b/style.css
@@ -8,8 +8,6 @@ body {
   background-color: #dbf9ff;
   /* background-color: #dbf9ff; */
   font-family: "Poppins", sans-serif;
-  overflow-x: hidden;
-  position: relative;
 }
 nav {
   position: sticky;
@@ -88,6 +86,7 @@ nav {
   body {
     overflow-x: hidden;
     top: 0px;
+    position: relative;
   }
 
   .logo img {
